<resources>
    <string name="app_name">Tenretni</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tickets">Tickets</string>
    <string name="Gateways">Gateways</string>
    <string name="networks">Networks</string>
    <string name="online">Online</string>
    <string name="n_a" translatable="false">N/A</string>
    <string name="loading_message">Loading %d/10 ...</string>
    <string name="concepteur"><![CDATA[Issam Abdelkrim & Samuel Gascon]]></string>
    <string name="tenretni_2023">Tenretni - 2023</string>
    <string name="ticket_number_IT">Ticket %s</string>
    <string name="gateway_number_title">Gateway %s</string>
    <string name="date_itemTicket">%s</string>
    <string name="priority_normal_IT">Normal</string>
    <string name="status_open_IT">Open</string>
    <string name="apiErrorMessage">Error while retrieving the data from the server.</string>
    <string name="nanoSeconde" translatable="false">%d ns</string>
    <string name="ebps" translatable="false">%.3f Ebps</string>
    <string name="dBm" translatable="false">%d dBm</string>
    <string name="gateway">Gateways</string>
    <string name="btn_reboot">REBOOT</string>
    <string name="kernel_revision">Kernel revision %s</string>
    <string name="version" translatable="false">Version %s</string>
    <string name="solve">SOLVE</string>
    <string name="install">INSTALL</string>
    <string name="title_fragmentDetail">Ticket %s</string>
    <string name="first_name_and_last_name" translatable="false">%s %s</string>
    <string name="imvKernelFor" translatable="false">imvKernelDetails%s</string>
    <string name="user_canceled">User Canceled</string>
    <string name="missing_permission">Missing Permission</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="BtnOpen">OPEN</string>
</resources>