<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_tickets">

    <fragment
        android:id="@+id/navigation_tickets"
        android:name="com.example.tenretni.ui.tickets.TicketsFragment"
        android:label="@string/tickets"
        tools:layout="@layout/fragment_tickets" >
        <action
            android:id="@+id/action_navigation_tickets_to_detailTicketFragment"
            app:destination="@id/detailTicketFragment" />
    </fragment>

    <fragment
        android:id="@+id/gatewaysFragment"
        android:name="com.example.tenretni.ui.gateways.GatewaysFragment"
        android:label="@string/Gateways"
        tools:layout="@layout/fragment_gateways" >
        <action
            android:id="@+id/action_navigation_gateways_to_detailGatewayFragment"
            app:destination="@id/detailGatewayFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_networks"
        android:name="com.example.tenretni.ui.networks.NetworksFragment"
        android:label="@string/networks"
        tools:layout="@layout/fragment_networks" />
    <fragment
        android:id="@+id/detailTicketFragment"
        android:name="com.example.tenretni.ui.tickets.details.DetailTicketFragment"
        android:label="@string/title_fragmentDetail"
        tools:layout="@layout/fragment_detail_ticket">
        <argument
            android:name="href"
            app:argType="string" />
        <action
            android:id="@+id/action_detailTicketFragment_to_mapsActivity"
            app:destination="@id/mapsActivity" />
        <action
            android:id="@+id/action_detailTicketFragment_to_detailGatewayFragment"
            app:destination="@id/detailGatewayFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailGatewayFragment"
        android:name="com.example.tenretni.ui.gateways.details.DetailGatewayFragment"
        android:label="fragment_detail_gateway"
        tools:layout="@layout/fragment_detail_gateway" >
        <argument
            android:name="hrefGateway"
            app:argType="string" />
    </fragment>
    <activity
        android:id="@+id/mapsActivity"
        android:name="com.example.tenretni.ui.maps.MapsActivity"
        android:label="activity_maps"
        tools:layout="@layout/activity_maps" >
        <argument
            android:name="latLong"
            app:argType="com.google.android.gms.maps.model.LatLng" />
        <argument
            android:name="name"
            app:argType="string" />
    </activity>
</navigation>