<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:layout_margin="8dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txvTicketNumberIT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/ticket_number_IT"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txvDateTicketIT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="18dp"
            android:text="@string/date_itemTicket"

            android:textAllCaps="false"
            android:textSize="15sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txvTicketNumberIT"
            app:layout_constraintStart_toStartOf="@+id/txvTicketNumberIT"
            app:layout_constraintTop_toBottomOf="@+id/txvTicketNumberIT" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="263dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipPriorityIT"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/priority_normal_IT"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:visibility="visible"
            app:chipBackgroundColor="@color/ticket_priority_normal"
            app:chipEndPadding="20dp"
            app:layout_constraintBottom_toTopOf="@+id/chipStatusIT"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:textStartPadding="20dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipStatusIT"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/status_open_IT"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:visibility="visible"
            app:chipBackgroundColor="@color/ticket_status_open"
            app:chipEndPadding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/chipPriorityIT"
            app:layout_constraintStart_toStartOf="@+id/chipPriorityIT"
            app:layout_constraintTop_toBottomOf="@+id/chipPriorityIT"
            app:textStartPadding="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>