<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.loading.LoadingActivity">

  <ImageView
      android:id="@+id/imvLogo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="192dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/tenretni" />

  <TextView
      android:id="@+id/txvLoading"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="190dp"
      android:layout_marginTop="13dp"
      android:layout_marginEnd="201dp"
      android:layout_marginBottom="242dp"

      android:fontFamily="serif"
      android:text="@string/loading_message"
      android:textAlignment="center"
      android:textAllCaps="false"
      android:textColor="#615F5F"
      android:textSize="34sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toTopOf="@+id/divider"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imvLogo" />

  <TextView
      android:id="@+id/txvConcepteur"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="196dp"
      android:layout_marginEnd="195dp"
      android:layout_marginBottom="11dp"
      android:text="@string/concepteur"
      app:layout_constraintBottom_toTopOf="@+id/txvProjet"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/divider" />

  <TextView
      android:id="@+id/txvProjet"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="195dp"
      android:layout_marginEnd="196dp"
      android:layout_marginBottom="45dp"
      android:text="@string/tenretni_2023"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txvConcepteur" />

  <View
      android:id="@+id/divider"
      android:layout_width="447dp"
      android:layout_height="1dp"
      android:layout_marginStart="1dp"
      android:layout_marginEnd="1dp"
      android:layout_marginBottom="17dp"
      android:background="?android:attr/listDivider"
      app:layout_constraintBottom_toTopOf="@+id/txvConcepteur"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txvLoading" />

  <com.google.android.material.progressindicator.LinearProgressIndicator android:id="@+id/pgbLoading"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:max="10"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>